--- a/logo/css/styles.css
+++ b/logo/css/styles.css
@@ -741,9 +741,51 @@ body._lock {
   letter-spacing: 0.3px;
 }
 
+.submenu-page__product .item-product {
+  border: none;
+}
+
+.submenu-page__product .item-product__image {
+  height: 195px;
+}
+
+.submenu-page__product .item-product__image img {
+  max-height: 175px;
+}
+
+.items-products {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  font-size: 0;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  margin: 0px -15px;
+}
+
+.items-products__column {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 1 33.33333%;
+          flex: 0 1 33.33333%;
+  max-width: 33.33333%;
+  padding: 0px 15px;
+  margin: 0px 0px 30px 0px;
+}
+
 .item-product {
-  padding: 10px 25px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  font-size: 0;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  height: 100%;
+  padding: 10px 25px 15px;
   position: relative;
+  border: 1px solid #f5f5f5;
+  overflow: hidden;
 }
 
 .item-product__labels {
@@ -766,7 +808,7 @@ body._lock {
 }
 
 .item-product__image {
-  height: 195px;
+  height: 255px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -782,24 +824,43 @@ body._lock {
 
 .item-product__image img {
   max-width: 100%;
-  max-height: 175px;
+  max-height: 235px;
 }
 
 .item-product__body {
   margin: 0px 0px 0px 15px;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  font-size: 0;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
 .item-product__description,
 .item-product__name {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto;
+  display: block;
   color: #36949f;
   font-size: 16px;
   font-weight: 300;
   line-height: 24px;
+  -webkit-transition: all 0.3s ease 0s;
+  -o-transition: all 0.3s ease 0s;
+  transition: all 0.3s ease 0s;
 }
 
-.item-product__description:hover,
-.item-product__name:hover {
-  text-decoration: underline;
+.item-product__description span,
+.item-product__name span {
+  display: block;
+  font-weight: 900;
 }
 
 .item-product__footer {
@@ -816,9 +877,13 @@ body._lock {
           justify-content: space-between;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
+  -webkit-transition: all 0.3s ease 0s;
+  -o-transition: all 0.3s ease 0s;
+  transition: all 0.3s ease 0s;
 }
 
-.item-product__old-price {
+.item-product__old-price,
+.hover-item-product__old-price {
   -webkit-box-flex: 1;
       -ms-flex: 1 0 100%;
           flex: 1 0 100%;
@@ -829,18 +894,144 @@ body._lock {
   text-align: right;
 }
 
-.item-product__old-price::after {
+.item-product__old-price::after,
+.hover-item-product__old-price::after {
   font-size: 14px;
 }
 
-.item-product__price {
+.item-product__price,
+.hover-item-product__price {
   color: #333333;
   font-size: 24px;
   font-weight: 900;
 }
 
-.item-product__price::after {
+.item-product__price::after,
+.hover-item-product__price::after {
   font-size: 19px;
+}
+
+.item-product__hover {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  -webkit-transition: all 0.3s ease 0s;
+  -o-transition: all 0.3s ease 0s;
+  transition: all 0.3s ease 0s;
+  -webkit-transform: translate3d(-101%, 0, 0);
+  -ms-transform: translate3d(-101%, 0, 0);
+  transform: translate3d(-101%, 0, 0);
+}
+
+.hover-item-product {
+  border: 5px solid #f68038;
+  background-color: rgba(0, 0, 0, 0.84);
+  padding: 15px 20px 18px 15px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  font-size: 0;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  color: white;
+}
+
+.hover-item-product__title {
+  font-size: 16px;
+  color: #c2c2c2;
+  font-weight: 300;
+  margin: 0px 0px 25px 0px;
+}
+
+.hover-item-product__title span {
+  display: block;
+  color: white;
+  font-weight: 900;
+  margin: 0px 0px 5px 0px;
+}
+
+.no-webp .hover-item-product__cart{
+  background: url("../img/big_cart_o.png") center no-repeat; }
+
+.hover-item-product__cart {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto;
+  min-width: 67px;
+  min-height: 67px;
+}
+
+.hover-item-product__footer {
+  padding: 15px 0px 0px 0px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  font-size: 0;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.hover-item-product__old-price {
+  margin: 0px 0px 8px 0px;
+}
+
+.hover-item-product__stock {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  font-size: 0;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 21px;
+  padding: 0px 10px 3px;
+  background-color: #ffffff;
+  border-radius: 15px;
+  overflow: hidden;
+  color: #f68038;
+  font-size: 14px;
+  font-weight: 300;
+  text-align: left;
+}
+
+.hover-item-product__price {
+  color: white;
+}
+
+.hover-item-product__price::after {
+  margin: 0px 0px 0px -3px !important;
+}
+
+.options-item-product {
+  font-size: 14px;
+  text-align: left;
+}
+
+.options-item-product__item {
+  margin: 0px 0px 8px 0px;
+}
+
+.options-item-product__label {
+  line-height: 24px;
+}
+
+.options-item-product__value {
+  color: #f68038;
+  font-weight: 900;
+  line-height: 18px;
 }
 
 .side-title {
@@ -1116,6 +1307,26 @@ body._lock {
   color: #979797;
 }
 
+.products-slider__header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  font-size: 0;
+  margin: 0px 0px 30px 0px;
+}
+
+.products-slider__title {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto;
+  color: #dadada;
+  font-family: "ush";
+  font-size: 36px;
+  text-align: left;
+  text-transform: uppercase;
+  letter-spacing: 0.9px;
+}
+
 .rub:after {
   content: "₽";
   margin: 0px 0px 0px 3px;
@@ -1356,7 +1567,6 @@ textarea.input {
     position: absolute;
     top: 0;
     left: 100%;
-    width: 100%;
     height: 100%;
     overflow: hidden;
     pointer-events: none;
@@ -1383,6 +1593,18 @@ textarea.input {
   .submenu-page__link:hover {
     color: #ffffff;
     background-color: #71c7d3;
+  }
+
+  .item-product:hover .item-product__hover {
+    -webkit-transform: translate3d(0, 0, 0);
+    -ms-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+  }
+
+  .item-product:hover .item-product__description,
+  .item-product:hover .item-product__name,
+  .item-product:hover .item-product__footer {
+    opacity: 0;
   }
 
   .side-title:hover {
@@ -1795,6 +2017,8 @@ textarea.input {
 .webp .search-page__title:after{ background: url(../img/down_arr.webp) 0 0 no-repeat; }
 
 .webp .menu-page__parent .menu-page__link:after{ background: url(../img/right_arr.webp) 0 0 no-repeat; }
+
+.webp .hover-item-product__cart{ background: url(../img/big_cart_o.webp) center no-repeat; }
 
 .webp .content-mainslider__button span{ background: url(../img/right_arr.webp) right 0 no-repeat; }
 
